--- a/.github/workflows/clean-colab-metadata.yml
+++ b/.github/workflows/clean-colab-metadata.yml
@@ -5,6 +5,9 @@ on:
     paths:
       - "**/*.ipynb"
 
+permissions:
+  contents: write  # <-- Required to push changes
+
 jobs:
   clean-metadata:
     runs-on: ubuntu-latest
@@ -26,13 +29,15 @@ jobs:
         run: python .github/scripts/clean_colab_metadata.py
 
       - name: Commit and push changes if metadata was cleaned
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           if [[ `git status --porcelain` ]]; then
             git config --global user.name "github-actions[bot]"
             git config --global user.email "github-actions[bot]@users.noreply.github.com"
             git add .
             git commit -m "fix: clean Colab notebook metadata for GitHub rendering"
-            git push
+            git push https://x-access-token:${KEERTHI_PAT}@github.com/${{ github.repository }} HEAD:${{ github.ref_name }}
           else
             echo "No metadata changes detected."
           fi
